Permission own only and API key, add audit info
